syntax = "proto3";

package counting.protocol;

// 基础协议数据
message BaseProtocolData {
  string timestamp = 1;
  string protocol_type = 2;
  string raw_data = 3;
}

// 点钞机协议数据
message CountingProtocolData {
  BaseProtocolData base = 1;
  repeated uint32 check = 2;
  uint32 length = 3;
  uint32 cmd_group = 4;
  uint32 total_count = 5;
  uint32 denomination = 6;
  uint64 total_amount = 7;
  string currency_code = 8;
  string serial_number = 9;
  uint32 machine_mode = 10;
  repeated uint32 reserved1 = 11;
  uint32 error_code = 12;
  uint32 status = 13;
  uint32 reserved2 = 14;
  uint32 crc = 15;
}

// CDM计数结果数据
message CDMCountResultData {
  BaseProtocolData base = 1;
  uint32 total_count = 2;
  uint32 denomination = 3;
  uint64 total_amount = 4;
  string currency_code = 5;
  string serial_number = 6;
  repeated uint32 reserved1 = 7;
  uint32 error_code = 8;
  uint32 status = 9;
  uint32 reserved2 = 10;
}

// CDM协议数据
message CDMProtocolData {
  BaseProtocolData base = 1;
  repeated uint32 header = 2;
  uint32 length = 3;
  uint32 cmd_group = 4;
  repeated uint32 data = 5;
  uint32 crc = 6;
}

// 计数详细记录
message CounterData {
  uint32 id = 1;
  uint32 no = 2;
  string timestamp = 3;
  string currency_code = 4;
  uint32 denomination = 5;
  string status = 6; // "counting" | "completed" | "error" | "paused"
  string error_code = 7;
  string serial_number = 8;
}

// 面额详细信息
message DenominationDetail {
  uint32 denomination = 1;
  uint32 count = 2;
  uint64 amount = 3;
}

// Session数据结构
message SessionData {
  uint32 id = 1;
  uint32 no = 2;
  string timestamp = 3;
  string start_time = 4;
  string end_time = 5;
  string machine_mode = 6;
  uint32 total_count = 7;
  uint64 total_amount = 8;
  uint32 error_count = 9;
  string status = 10; // "counting" | "completed" | "error" | "paused"
  string error_code = 11;
  map<uint32, DenominationDetail> denomination_breakdown = 12;
  repeated CounterData details = 13;
}

// Session数据批量序列化
message SessionDataBatch {
  repeated SessionData sessions = 1;
  string created_at = 2;
  uint32 version = 3;
}
